--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ application/logs/*
 !application/logs/.htaccess
 /vendor/
 
-uploads/banner/*
+uploads/banner/*.gitkeep
 uploads/client/*
 uploads/galeri/*
 uploads/kategori_layanan/*
