keep empty directory uploads

--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,20 @@ application/logs/*
 uploads/banner/*
 !uploads/banner/.gitkeep 
 uploads/client/*
+!uploads/client/.gitkeep
 uploads/galeri/*
+!uploads/galeri/.gitkeep
 uploads/kategori_layanan/*
+!uploads/kategori_layanan/.gitkeep
 uploads/kontak_kami/*
+!uploads/kontak_kami/.gitkeep
+uploads/layanan/*
+!uploads/layanan/.gitkeep
 uploads/logo/*
+!uploads/logo/.gitkeep
 uploads/main_popup/*
+!uploads/main_popup/.gitkeep
 uploads/tentang_kami/*
+!uploads/tentang_kami/.gitkeep
 uploads/testimoni/*
+!uploads/testimoni/.gitkeep
