--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ application/logs/*
 !application/logs/.htaccess
 /vendor/
 
-application/config/database.php
+.env
 
 uploads/banner/*
 !uploads/banner/.gitkeep 
